[gd_scene load_steps=47 format=3 uid="uid://bqp3v1viw6h70"]

[ext_resource type="Script" path="res://Scene/RoleScene/Award/Award.gd" id="1_8yuv1"]
[ext_resource type="Texture2D" uid="uid://de6nti5jdpvrj" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/2_atk/2_atk_1.png" id="1_aoj08"]
[ext_resource type="Texture2D" uid="uid://cf0vap0pplgq7" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/2_atk/2_atk_2.png" id="2_b60gf"]
[ext_resource type="Texture2D" uid="uid://bd01aprt4uhh0" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/2_atk/2_atk_3.png" id="3_8q06k"]
[ext_resource type="Texture2D" uid="uid://da1i6pqs7l7si" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/2_atk/2_atk_4.png" id="4_ifwdv"]
[ext_resource type="Texture2D" uid="uid://b8a20rc1pblcc" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/2_atk/2_atk_5.png" id="5_6dgwk"]
[ext_resource type="Texture2D" uid="uid://dpkmu25apdvor" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/2_atk/2_atk_6.png" id="6_58234"]
[ext_resource type="Texture2D" uid="uid://bt0nf2rnfk2h3" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/2_atk/2_atk_7.png" id="7_81wq6"]
[ext_resource type="Texture2D" uid="uid://d1bd81pri78se" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/2_atk/2_atk_8.png" id="8_2klrp"]
[ext_resource type="Texture2D" uid="uid://5i6am6h84rfi" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/2_atk/2_atk_9.png" id="9_nd0nq"]
[ext_resource type="Texture2D" uid="uid://boeymg44x0ses" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/2_atk/2_atk_10.png" id="10_nbxk7"]
[ext_resource type="Texture2D" uid="uid://dljt4mq2qr0q8" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/2_atk/2_atk_11.png" id="11_ac5u7"]
[ext_resource type="Texture2D" uid="uid://ddmbf2iu2obid" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/2_atk/2_atk_12.png" id="12_mvtl2"]
[ext_resource type="Texture2D" uid="uid://cuijwk12tciwb" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/2_atk/2_atk_13.png" id="13_6vmcp"]
[ext_resource type="Texture2D" uid="uid://v17li8t3cg0x" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/2_atk/2_atk_14.png" id="14_08a2p"]
[ext_resource type="Texture2D" uid="uid://bafhx12urermo" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/2_atk/2_atk_15.png" id="15_5defv"]
[ext_resource type="Texture2D" uid="uid://bei36tpwwyeaw" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/take_hit/take_hit_1.png" id="16_uyrxs"]
[ext_resource type="Texture2D" uid="uid://dokvmeimbepfq" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/take_hit/take_hit_2.png" id="17_rxbk6"]
[ext_resource type="Texture2D" uid="uid://bk4gks0x26bm2" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/take_hit/take_hit_3.png" id="18_g6xgo"]
[ext_resource type="Texture2D" uid="uid://cdmvulvmvok5j" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/take_hit/take_hit_4.png" id="19_i7ltb"]
[ext_resource type="Texture2D" uid="uid://ljhpbhdgl0q6" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/take_hit/take_hit_5.png" id="20_67578"]
[ext_resource type="Texture2D" uid="uid://bh1putucmoubv" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/take_hit/take_hit_6.png" id="21_fevjv"]
[ext_resource type="Texture2D" uid="uid://brgqlya3pgpcb" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/death/death_1.png" id="22_m3g57"]
[ext_resource type="Texture2D" uid="uid://31fa77u243vd" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/death/death_2.png" id="23_52lbm"]
[ext_resource type="Texture2D" uid="uid://cwhroxrqbgf4o" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/death/death_3.png" id="24_w2coe"]
[ext_resource type="Texture2D" uid="uid://87odb75xbhfk" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/death/death_4.png" id="25_7sdfw"]
[ext_resource type="Texture2D" uid="uid://dgsv15583ui7o" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/death/death_5.png" id="26_2fx43"]
[ext_resource type="Texture2D" uid="uid://8ochqm2hqmw4" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/death/death_6.png" id="27_uq2v5"]
[ext_resource type="Texture2D" uid="uid://de7s3xxnhqxfq" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/death/death_7.png" id="28_v1qrd"]
[ext_resource type="Texture2D" uid="uid://c5cgyt5ohhqsu" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/death/death_8.png" id="29_bv3bt"]
[ext_resource type="Texture2D" uid="uid://b3wpv3ynpetwi" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/death/death_9.png" id="30_yk3q5"]
[ext_resource type="Texture2D" uid="uid://shjnlapc8psn" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/death/death_10.png" id="31_e3f76"]
[ext_resource type="Texture2D" uid="uid://yaaelihkkahd" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/death/death_11.png" id="32_k3ukf"]
[ext_resource type="Texture2D" uid="uid://cfj7qw25kb5kw" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/death/death_12.png" id="33_phlad"]
[ext_resource type="Texture2D" uid="uid://8bqdlsp520vf" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/run/run_1.png" id="34_7v0t3"]
[ext_resource type="Texture2D" uid="uid://buvmkiy7s10yw" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/run/run_2.png" id="35_07seq"]
[ext_resource type="Texture2D" uid="uid://cn8onmr22fn75" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/run/run_3.png" id="36_brx1v"]
[ext_resource type="Texture2D" uid="uid://dqg2td5ygccoy" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/run/run_4.png" id="37_cdif5"]
[ext_resource type="Texture2D" uid="uid://cbfbjnqxwvrdi" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/run/run_5.png" id="38_doeb6"]
[ext_resource type="Texture2D" uid="uid://dw6j0r57e8l03" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/run/run_6.png" id="39_w6lh1"]
[ext_resource type="Texture2D" uid="uid://nkovv8qim624" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/run/run_7.png" id="40_qjto1"]
[ext_resource type="Texture2D" uid="uid://kdstubqt2m6q" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/run/run_8.png" id="41_adaal"]
[ext_resource type="Texture2D" uid="uid://qk1pqk7h3o71" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/run/run_9.png" id="42_jx4op"]
[ext_resource type="Texture2D" uid="uid://dqbqbbad7rgw4" path="res://Source/Elementals_Leaf_ranger_Free_v1.0/animations/PNG/run/run_10.png" id="43_s3xbr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_njug4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_aoj08")
}, {
"duration": 1.0,
"texture": ExtResource("2_b60gf")
}, {
"duration": 1.0,
"texture": ExtResource("3_8q06k")
}, {
"duration": 1.0,
"texture": ExtResource("4_ifwdv")
}, {
"duration": 1.0,
"texture": ExtResource("5_6dgwk")
}, {
"duration": 1.0,
"texture": ExtResource("6_58234")
}, {
"duration": 1.0,
"texture": ExtResource("7_81wq6")
}, {
"duration": 1.0,
"texture": ExtResource("8_2klrp")
}, {
"duration": 1.0,
"texture": ExtResource("9_nd0nq")
}, {
"duration": 1.0,
"texture": ExtResource("10_nbxk7")
}, {
"duration": 1.0,
"texture": ExtResource("11_ac5u7")
}, {
"duration": 1.0,
"texture": ExtResource("12_mvtl2")
}, {
"duration": 1.0,
"texture": ExtResource("13_6vmcp")
}, {
"duration": 1.0,
"texture": ExtResource("14_08a2p")
}, {
"duration": 1.0,
"texture": ExtResource("15_5defv")
}],
"loop": false,
"name": &"Attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_uyrxs")
}, {
"duration": 1.0,
"texture": ExtResource("17_rxbk6")
}, {
"duration": 1.0,
"texture": ExtResource("18_g6xgo")
}, {
"duration": 1.0,
"texture": ExtResource("19_i7ltb")
}, {
"duration": 1.0,
"texture": ExtResource("20_67578")
}, {
"duration": 1.0,
"texture": ExtResource("21_fevjv")
}],
"loop": false,
"name": &"BeAttacked",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("22_m3g57")
}, {
"duration": 1.0,
"texture": ExtResource("23_52lbm")
}, {
"duration": 1.0,
"texture": ExtResource("24_w2coe")
}, {
"duration": 1.0,
"texture": ExtResource("25_7sdfw")
}, {
"duration": 1.0,
"texture": ExtResource("26_2fx43")
}, {
"duration": 1.0,
"texture": ExtResource("27_uq2v5")
}, {
"duration": 1.0,
"texture": ExtResource("28_v1qrd")
}, {
"duration": 1.0,
"texture": ExtResource("29_bv3bt")
}, {
"duration": 1.0,
"texture": ExtResource("30_yk3q5")
}, {
"duration": 1.0,
"texture": ExtResource("31_e3f76")
}, {
"duration": 1.0,
"texture": ExtResource("32_k3ukf")
}, {
"duration": 1.0,
"texture": ExtResource("33_phlad")
}],
"loop": false,
"name": &"Dead",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("34_7v0t3")
}, {
"duration": 1.0,
"texture": ExtResource("35_07seq")
}, {
"duration": 1.0,
"texture": ExtResource("36_brx1v")
}, {
"duration": 1.0,
"texture": ExtResource("37_cdif5")
}, {
"duration": 1.0,
"texture": ExtResource("38_doeb6")
}, {
"duration": 1.0,
"texture": ExtResource("39_w6lh1")
}, {
"duration": 1.0,
"texture": ExtResource("40_qjto1")
}, {
"duration": 1.0,
"texture": ExtResource("41_adaal")
}, {
"duration": 1.0,
"texture": ExtResource("42_jx4op")
}, {
"duration": 1.0,
"texture": ExtResource("43_s3xbr")
}],
"loop": true,
"name": &"Walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g31ua"]
size = Vector2(10, 42)

[node name="Award" type="CharacterBody2D"]
script = ExtResource("1_8yuv1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_njug4")
animation = &"Attack"
frame = 10
frame_progress = 0.440527
offset = Vector2(0, -40)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_g31ua")

[node name="RightDownCast" type="RayCast2D" parent="."]
position = Vector2(20, 0)

[node name="LeftDownCast" type="RayCast2D" parent="."]
position = Vector2(-20, 0)

[node name="Rshoot" type="Node2D" parent="."]
position = Vector2(33, -10)

[node name="Lshoot" type="Node2D" parent="."]
position = Vector2(-33, -10)

[node name="RightAttackCheck" type="RayCast2D" parent="."]
position = Vector2(0, -10)
target_position = Vector2(100, 0)

[node name="LeftAttackCheck" type="RayCast2D" parent="."]
position = Vector2(0, -10)
target_position = Vector2(-100, 0)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
